Refactored java/anagram